--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
+    "@tabler/icons-react": "^3.19.0",
     "axios": "^1.7.7",
     "firebase": "^10.13.2",
     "html2canvas": "^1.4.1",
